v1.1.4
   Fixed use of ephemeral params that managed to get reverted!
   Added a couple of addition error messages to TagReader
   Added MRZ key logging

v1.1.3
    Fix for some ECDSA based message digests which seem to have invalid format (0x00 prefixed on the integers)
       See OpenSSLUtils :: verifySignature for details on the fix
       Thanks to @wellbranding for the report and helping test

v1.1.2
    Implemented PACE
       Currently only GM mapping is supported (IM and CAM not yet), but supports both ECDH and DH encryption
            Many thanks to @filom again for really helping me debug and fix the DH implementation!
    Added ability to select MasterFile and also reselect the eMRTD application record
    Now tries to read the CardAccess file (in master record) - required for PACE
    Fix to use extended length if the size of the protected APDU is more than 255 chars
       Changed wrapDO/unwrapDO to use TKBERTLVRecord to handle the encoding/decoding rather than doing it manually
       Thanks again to @filom for this fix.
    Some fixes to Chip Authentication not freeing up some objects correctly,
        and also fixes where no ChipAuthenticationInfo sections are included, try to guess what oid it would be.)
    binToHexRep can now optionally output hex as array text (defaults to existing behaviour)
    SHA224 hashes should now be supported
    
v1.1.1
    Implemented ChipAuthentication - currently only ECDH DES and AES based keys are tested.  DH DES & AES keys should work though
    Demo app now includes the SecurityInfos information
    
v1.1.0
    This release contains the following minor breaking changes:
        TagError has been renamed to NFCPassportReaderError
    Upgraded to OpenSSL 1.1.1i
        This moved from typed pointers (e.g. UnsafeMutablePointer<X509>) to OpaquePointers (due to OpenSSL changes)
        No longer accessing OpenSSL structures directly - now using OpenSSL methods (as we should)