@@ -34,6 +34,12 @@ public class DataGroup {
     
     func getNextTag() throws -> Int {
         var tag = 0
+        
+        // Fix for some passports that may have invalid data - ensure that we do have data!
+        guard data.count > pos else {
+            throw NFCPassportReaderError.TagNotValid
+        }
+
         if binToHex(data[pos]) & 0x0F == 0x0F {
             tag = Int(binToHex(data[pos..<pos+2]))
             pos += 2
