@@ -2,6 +2,7 @@ v1.1.4
    Fixed use of ephemeral params that managed to get reverted!
    Added a couple of addition error messages to TagReader
    Added MRZ key logging
+   Added ability to turn off logging completely
 
 v1.1.3
     Fix for some ECDSA based message digests which seem to have invalid format (0x00 prefixed on the integers)
